# game-streamer

./: Cargo.toml
docs/: 01_dxgi_webrtc_browser.md  02_ffmpeg_webrtc_browser.md
docs/02_ffmpeg/: week_1_signaling_basic_webrtc.md  week_1_smoke_test.md  week_2_ffmpeg_capture.md  week_2_smoke_test.md  week_3_ffmpeg_to_webrtc_pipe.md  week_3_smoke_test.md  week_4_input_channel.md  week_4_smoke_test.md
docs/poc_initial_scenarious/: 02_ffmpeg_webrtc_browser.md  03_dxgi_webrtc_flutter.md  04_gstreamer_webrtc_browser.md
public/: index.html
src/: app.rs  handlers.rs  input_injector.rs  main.rs  media_bridge.rs  models.rs  service.rs  state.rs
